# hellspawn-backend-prototype

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  docker-compose.yml  vcpkg.json
scripts/: setup-vcpkg.sh
src/: main.cpp
src/models/: user.hpp
src/rest/controllers/: AuthController.cpp  AuthController.hpp
